--- a/env.example
+++ b/env.example
@@ -25,6 +25,12 @@ TWILIO_ACCOUNT_SID="your_twilio_account_sid"
 TWILIO_AUTH_TOKEN="your_twilio_auth_token"
 TWILIO_PHONE_NUMBER="+1234567890"
 
+# Cloudinary Configuration (Required for file uploads)
+CLOUDINARY_CLOUD_NAME="your_cloudinary_cloud_name"
+CLOUDINARY_API_KEY="your_cloudinary_api_key"
+CLOUDINARY_API_SECRET="your_cloudinary_api_secret"
+
 # App Configuration
 NODE_ENV="development"
 PORT=3000
+
