--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cloudinary": "^2.8.0",
+    "libphonenumber-js": "^1.11.11",
     "megajs": "^1.3.8",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
