--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.10",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/websockets": "^11.1.10",
     "@prisma/client": "^6.14.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/nodemailer": "^6.4.17",
@@ -51,6 +53,7 @@
     "redis": "^5.8.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.3",
     "swagger-ui-express": "^5.0.1",
     "twilio": "^5.8.0"
   },
