--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.3",
     "swagger-ui-express": "^5.0.1",
-    "twilio": "^5.8.0"
+    "twilio": "^5.8.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
